<resources>
    <string name="app_name" translatable="false">cloud_authenticator</string>
    <string name="app_description">CloudAuthenticators demo</string>
    <string name="yandex">Yandex</string>
    <string name="google">Google</string>
    <string name="local">Local</string>
    <string name="do_authorize">Do auth</string>
    <string name="auth_method">Auth method</string>
    <string name="auth_method_native">NATIVE</string>
    <string name="auth_method_webview">WebView</string>
    <string name="auth_in">Sign in with %1$s</string>
    <string name="de_auth_from">Sign out from %1$s</string>
    <string name="auth_provider">Auth provider</string>
    <string name="auth_token">Auth token:\n%1$s</string>
</resources>